# boorusama-qt

./: CONTRIBUTING.md  README.md  main.py  pyproject.toml  pyrightconfig.json
.claude/skills/gh-labeling/: SKILL.md
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
boorusama/: __init__.py  app.py  config.py  context.py
boorusama/core/: __init__.py  engine.py  imageloader.py  models.py  registry.py  workers.py
boorusama/engines/: __init__.py  danbooru.py  gelbooru.py  generic.py
boorusama/services/: __init__.py  blacklist.py  downloads.py  storage.py
boorusama/ui/: __init__.py  main_window.py  pages.py  post_grid.py  post_viewer.py  search_bar.py  settings_dialog.py  theme.py  widgets.py
scripts/: ci_smoke.py  setup-hooks.sh
