[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boorusama-qt"
description = "Desktop booru client built with Qt for Python (PySide6) — a reimplementation of the Flutter app Boorusama"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "1Git2Clone" }]
keywords = ["booru", "danbooru", "gelbooru", "qt", "pyside6", "image-viewer", "desktop"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics :: Viewers",
]
dynamic = ["version"]
dependencies = [
  "PySide6>=6.6",
  "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/1Git2Clone/boorusama-qt"
Repository = "https://github.com/1Git2Clone/boorusama-qt"
Issues = "https://github.com/1Git2Clone/boorusama-qt/issues"

[project.scripts]
boorusama-qt = "boorusama.app:run"

[tool.hatch.version]
path = "boorusama/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["boorusama"]

[tool.hatch.build.targets.sdist]
include = ["boorusama", "main.py", "README.md", "LICENSE", "requirements.txt"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# pyflakes + import/statement/syntax errors + isort import ordering.
select = ["E4", "E7", "E9", "F", "I"]
